# Procesamiento-de-Imagenes-Satelitales-VNP46A1

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh
Data/: municipios_coordenadas_pixeles.json
api/: __init__.py  agent.py  job_manager.py  main.py  routes.py  schemas.py
api/static/: index.html
data/: Iztapalapa.csv  distancias_centroide_cdmx.csv  limite-de-las-alcaldias.json  municipios_coordenadas_pixeles.json
docs/: index.html  style.css
examples/: api_example.py  async_example.py  matriz_example.py  sync_example.py
satellite/: config.py  downloader.py  models.py  processing.py  satellite_async.py
satellite_async/: __init__.py  config.py  debug_coordenadas_multiples.py  debug_token.py  debug_url_problem.py  diagnostico_coordenadas.py  downloader.py  main.py  models.py  multi_municipio.py  processing.py  pyproject.toml  satellite_async.py  test_debug.py  test_iztapalapa.py  test_municipios.py  test_single_municipio.py  utils.py  verificar_cuadrantes.py
satellite_processor/: config.py  ejemplo_uso.py  image_processor.py  main.py  models.py  processor.py  utils.py
satellite_sync/: __init__.py  centroides.py  config.py  downloader.py  geometry.py  image_processor.py  main.py  models.py  processing.py  processor.py  satellite_sync.py  utils.py
scripts/ingest_data/: models.py
test/: test.ipynb
tests/: conftest.py
tests/api/: test_api.py
tests/fixtures/: municipios_sample.json  sample_directory.html
vnp46a1_data/: __init__.py  municipios_coordenadas_pixeles.json
(+8 files in other folders)
