[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "satellite_async"
version = "0.1.0"
description = "VNP46A1 satellite nighttime radiance processing"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "aiohttp>=3.9",
    "h5py>=3.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["satellite_async*"]